# jmidi

./: .gitignore  CMakeLists.txt  README.md  generic_chunk_low_level.cpp  make_mtrk_event.h  midi_container.cpp  midi_container.h  midi_delta_time.h  midi_examples.cpp  midi_examples.h  midi_maybe.cpp  midi_maybe.h  midi_raw.cpp  midi_raw.h  midi_raw_test_parts.cpp  midi_raw_test_parts.h  midi_utils.cpp  midi_utils.h  midi_vlq.cpp  midi_vlq.h  midi_vlq_deprecated.h  midiread.cpp  midiread.h  mthd_container_t.cpp  mthd_container_t.h  mthd_t.cpp  mthd_t.h  mtrk_container_t.cpp  mtrk_container_t.h  mtrk_container_t_old.cpp  mtrk_container_t_old.h  mtrk_event_iterator_t.cpp  mtrk_event_iterator_t.h  mtrk_event_iterator_t2.cpp  mtrk_event_iterator_t2.h  mtrk_event_methods.cpp  mtrk_event_methods.h  mtrk_event_t.cpp  mtrk_event_t.h  mtrk_event_t2.cpp  (+14 more)
examples/: vlq_benchmark.cpp
examples/event_sizes_benchmark/: event_sizes_benchmark.cpp  event_sizes_benchmark.h
examples/fuzzgen/: fuzzgen.cpp
examples/midistats/: midistats.cpp
examples/randmidi/: randmidi.cpp
examples/scr/: dfa.cpp  dfa.h  scr.cpp
examples/smfprint/: smfprint.cpp
examples/vlq_benchmark/: vlq_benchmark.cpp  vlq_benchmark.h
fuzz_targets/: make_mthd_fuzz.cpp  make_mtrk_event_fuzz.cpp  make_smf_fuzz.cpp  make_sysex_fuzz.cpp
include/: aux_types.h  deprecated_make_mtrk_event.h  generic_chunk_low_level.h  generic_iterator.h  make_mtrk_event.h  midi_data.h  midi_delta_time.h  midi_examples.h  midi_raw.h  midi_raw_test_parts.h  midi_status_byte.h  midi_time.h  midi_vlq.h  midi_vlq_deprecated.h  mthd_t.h  mtrk_event_methods.h  mtrk_event_t.h  mtrk_event_t_internal.h  mtrk_integrators.h  mtrk_t.h  print_hexascii.h  small_bytevec_t.h  smf_t.h  smf_t2.h  util.h
src/: aux_types.cpp  deprecated_make_mtrk_event.cpp  generic_chunk_low_level.cpp  generic_iterator.cpp  make_mtrk_event.cpp  midi_delta_time.cpp  midi_examples.cpp  midi_raw.cpp  midi_raw_test_parts.cpp  midi_status_byte.cpp  midi_time.cpp  midi_vlq.cpp  mthd_t.cpp  mtrk_event_methods.cpp  mtrk_event_t.cpp  mtrk_event_t_internal.cpp  mtrk_t.cpp  small_bytevec_t.cpp  smf_t.cpp  smf_t2.cpp  util.cpp
tests/: delta_time_test_data.cpp  delta_time_test_data.h  deprecated_make_mtrk_event2_tests.cpp  deprecated_make_mtrk_event_tests.cpp  make_mtrk_event2_tests.cpp  make_mtrk_event3.cpp  make_mtrk_event_tests.cpp  midi_chunk_low_level_tests.cpp  midi_dt_tests.cpp  midi_raw_test_data.cpp  midi_raw_test_data.h  midi_sb_classification_funcs.cpp  midi_tempo_and_timediv_tests.cpp  midi_testdata_status_bytes.cpp  midi_testdata_status_bytes.h  midi_vlq_tests.cpp  mthd_t_test.cpp  mthd_test_data.cpp  mthd_test_data.h  mtrk_duration_tests.cpp  mtrk_event_class_method_tests.cpp  mtrk_event_ctor_tests.cpp  mtrk_event_internal.cpp  mtrk_event_interrogation_ch_events.cpp  mtrk_event_sysex_factory_funcs.cpp  mtrk_event_t_meta_factory_funcs_tests.cpp  mtrk_event_t_tests.cpp  mtrk_special_member_function_tests.cpp  mtrk_t_split_merge_test.cpp  mtrk_t_test.cpp  mtrk_test_data.cpp  mtrk_test_data.h  small_bytevec_tests.cpp  smf_chrono_iterator_test.cpp  sysex_factory_test_data.cpp  sysex_factory_test_data.h
tests/test_data/: clementi_no_rs.mid  clementi_no_rs.mid.bak  clementi_nors.txt  clementi_rs.mid  clementi_rs.txt  tc_a_no_rs.mid  tc_a_no_rs.txt  tc_a_rs.mid  tc_a_rs.txt
tests/test_data/tempo_duration/: about.txt  tdiv0x7FFF_tempo0x00FFFFFF.midi  tdiv0x7FFF_tempo1.midi  tdiv0x7FFF_tempo500k.midi  tdiv152_tempo500k.midi  tdiv1_tempo1.midi  tdiv1_tempo1234567.midi  tdiv25_tempo0.midi  tdiv25_tempo0x0FFFFFFF.midi  tdiv25_tempo1.midi  tdiv25_tempo250k.midi  tdiv25_tempo500k.midi  tdiv25_tempo750k.midi
visual_studio/: jmidi.sln
visual_studio/event_sizes_benchmark/: event_sizes_benchmark.vcxproj  event_sizes_benchmark.vcxproj.filters
visual_studio/fuzzgen/: fuzzgen.vcxproj  fuzzgen.vcxproj.filters
visual_studio/jmidi/: jmidi.vcxproj  jmidi.vcxproj.filters
visual_studio/midistats/: midistats.vcxproj  midistats.vcxproj.filters
visual_studio/randmidi/: randmidi.vcxproj  randmidi.vcxproj.filters
visual_studio/scr/: invalid_000e08d89683060b884829eb6a9db5260fccb547.midi  invalid_0013a46a996a25aa12c6473bd3687ba7bd92451a.midi  scr.vcxproj  scr.vcxproj.filters
visual_studio/smfprint/: smfprint.cpp  smfprint.vcxproj  smfprint.vcxproj.filters
visual_studio/tests/: tests.vcxproj  tests.vcxproj.filters
visual_studio/vlq_benchmark/: vlq_benchmark.vcxproj  vlq_benchmark.vcxproj.filters
